--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -7,9 +7,10 @@
 <body>
 <h1>Ad</h1>
 <p th:text="'Title: ' +${ad.title}"></p>
-<p th:text="'City: ' + ${ad.city}"></p>
+<p th:text="'Price: ' + ${ad.price}"></p>
+<p th:text="'City: ' + ${ad.city.name}"></p>
 <p th:text="'Date of creation: ' + ${ad.dateOfCreation}"></p>
-<p>Creator: <a th:href="'/user/' + ${ad.user.id}">${ad.user}</a> </p>
+<p>Creator: <a th:href="'/user/' + ${ad.user.id}" th:text="${ad.user.name} + ' ' + ${ad.user.surname}"></a> </p>
 <p><a href="/ad/list">show list of ads</a></p>
 </body>
 </html>
