categories, new ad validation

--- a/src/main/resources/templates/newAd.html
+++ b/src/main/resources/templates/newAd.html
@@ -14,13 +14,20 @@
         <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
     </p>
     <p>Price: <label>
-        <input type="text" th:field="*{price}">
+        <input type="number" th:field="*{price}">
     </label>
         <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
     </p>
+    <p>Category: <label>
+        <select th:field="*{category}">
+            <option th:each="categoryFromList : ${listOfCategories}" th:value="${categoryFromList.id}"
+                    th:text="${categoryFromList.name}"></option>
+        </select>
+    </label></p>
     <p>City: <label>
         <select th:field="*{city}">
-            <option th:each="cityFromList : ${listOfCities}" th:value="${cityFromList.id}" th:text="${cityFromList.name}"></option>
+            <option th:each="cityFromList : ${listOfCities}" th:value="${cityFromList.id}"
+                    th:text="${cityFromList.name}"></option>
         </select>
     </label></p>
     <p>Description: <label>
