--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Ad</title>
+    <meta charset="UTF-8">
+    <title>Ad</title>
 </head>
 <body>
 <h1>Ad</h1>
 <p th:text="'Title: ' +${ad.title}"></p>
 <p th:text="'Price: ' + ${ad.price}"></p>
+<p th:text="'Category: ' + ${ad.category.name}"></p>
 <p th:text="'City: ' + ${ad.city.name}"></p>
 <p th:text="'Date of creation: ' + ${ad.dateOfCreation}"></p>
-<p>Creator: <a th:href="'/user/' + ${ad.user.id}" th:text="${ad.user.name} + ' ' + ${ad.user.surname}"></a> </p>
+<p>Creator: <a th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="${ad.user.name} + ' ' + ${ad.user.surname}"></a></p>
 <p><a href="/ad/list">show list of ads</a></p>
 </body>
 </html>
