--- a/src/main/resources/templates/startpage.html
+++ b/src/main/resources/templates/startpage.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Start page</title>
 </head>
-<body>
+
+<body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<div th:insert="~{model :: header}"></div>
 <h1>Start page</h1>
 <p><span th:if="${#authentication}"><a href="/my_account">my account</a></span></p>
-<p><a href="/login">login</a></p>
-<p><a href="/registration">registration</a></p>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <table>
     <tr>
         <th>Title</th>
