--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>my profile</h1>
+<p><img th:src="'/avatar/' + ${user.avatar.id}"></p>
 <p th:text="'Name: ' +${user.name}"></p>
 <p th:text="'Surname: ' + ${user.surname}"></p>
 <p th:text="'Phone number: ' + ${user.phoneNumber}"></p>
