--- a/src/main/resources/templates/startpage.html
+++ b/src/main/resources/templates/startpage.html
@@ -6,23 +6,53 @@
     <title>Start page</title>
 </head>
 
-<body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
 <h1>Start page</h1>
-<p><span th:if="${#authentication}"><a href="/my_account">my account</a></span></p>
+
+<div class="container-fluid my-carousel">
+
+</div>
+
+<div  class="m-5">
+    <div class="row gap-3 ">
+        <div th:each="ad : ${listOfAds}" class="card  bg-dark " style="width: 291px;">
+            <div th:if="${not #lists.isEmpty(ad.imageList)}">
+                <img th:src="'/image/' + ${ad.imageList.get(0).id}" class="card-img-top rounded" width="300" height="230" alt="...">
+            </div>
+            <div th:if="${ #lists.isEmpty(ad.imageList)}" >
+                <img src="https://prikolists.club/wp-content/uploads/2019/11/Screenshot_1-13.jpg" class="card-img-top rounded" width="300" height="230" alt="...">
+            </div>
+
+            <div class="card-body text-white ">
+                <div class="text-center p-3 text-primary" ><h4 class=" " th:text="${ad.title} "></h4></div>
+                <p th:text="'Категория: ' + ${ad.category.name}" class="card-text"></p>
+                <p th:text="'Город: ' + ${ad.city.name}" class="card-text"></p>
+                <p th:text="'Цена: '+${ad.price}+'p.'" class="card-text"></p>
+                <p th:text="'Дата публикации: ' +  ${#temporals.format(ad.dateOfCreation,'dd-MM-yyyy HH:mm')}"></p>
+                <a th:href="'/ad/info/' + ${ad.id}" class="btn btn-secondary float-end">Подробнее...</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Price</th>
-        <th>more info</th>
-    </tr>
-    <tr th:each="ad : ${listOfAds}">
-        <td th:text="${ad.title}"></td>
-        <td th:text="${ad.price}"></td>
-        <td><a th:href="'/ad/info/' + ${ad.id}">More info</a></td>
-    </tr>
-</table>
+
+
 </body>
 </html>
