--- a/src/main/resources/templates/listOfUsers.html
+++ b/src/main/resources/templates/listOfUsers.html
@@ -6,7 +6,7 @@
   <title>list of users</title>
 </head>
 <body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
-
+<div th:insert="~{model :: header}"></div>
 
 <table class=" ">
   <thead class="">
@@ -30,5 +30,6 @@
   <a href="/user/new">
     Add new user</a>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
