--- a/src/main/resources/templates/model.html
+++ b/src/main/resources/templates/model.html
@@ -36,13 +36,8 @@
 
                 <div sec:authorize="isAuthenticated()" class="text-end">
                     <div class="dropdown text-end">
-                            <a href="#" class="d-block link-light text-decoration-none dropdown-toggle show row" data-bs-toggle="dropdown" aria-expanded="true" >
-                                <div class="col">
-                                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                                </div>
-                                <div class="col">
-                                    <p class="text-center text-primary" th:text="${#authentication.getPrincipal().surname}+ ' ' + ${#authentication.getPrincipal().name} "></p>
-                                </div>
+                            <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
+                                <img th:src="'/avatar/' + ${#authentication.getPrincipal().avatar.id}" alt="mdo" width="40" height="40" class="rounded-circle">
                             </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><h4 class="text-center text-primary float-right" th:text="${#authentication.getPrincipal().surname}+ ' ' + ${#authentication.getPrincipal().name} "></h4></li>
