--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>Add user</title>
 </head>
-<body>
+<body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<div th:insert="~{model :: header}"></div>
 <h1>Form for adding a user</h1>
 <form action="/registration" th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
   <p>Name: <label>
@@ -37,5 +39,6 @@
   </p>
   <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
