--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Ad</title>
 </head>
-<body>
+<body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<div th:insert="~{model :: header}"></div>
 <h1>Ad</h1>
 <p th:text="'Title: ' +${ad.title}"></p>
 <p th:text="'Price: ' + ${ad.price}"></p>
@@ -16,5 +18,7 @@
 </ul>
 <p>Creator: <a th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="${ad.user.name} + ' ' + ${ad.user.surname}"></a></p>
 <p><a href="/">show list of ads</a></p>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
