--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -15,15 +15,24 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-lg-9 col-xl-7">
         <div class="card">
-          <div class="rounded-top text-white d-flex flex-row" style="background-color: #222; height:200px;">
-            <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
-              <img th:src="'/avatar/' + ${user.avatar.id}"
+          <div class="rounded-top text-white d-flex flex-row" style="background-color: #222; height:193px;">
+            <div th:if="${user.avatar != null}" class="ms-4 mt-3 d-flex flex-column" style="width: 150px;">
+                <img th:src="'/avatar/' + ${user.avatar.id}" width="150"  height="150"
+                     alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
+                     style="width: 150px; z-index: 1">
+              <a type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                      style="z-index: 1;" href="/my_account/edit">
+                Редактировать профиль
+              </a>
+            </div>
+            <div th:if="${ user.avatar == null}" class="ms-4 mt-3 d-flex flex-column" style="width: 150px;">
+              <img src="https://omsk.imperiya-pola.ru/img/nophoto.jpg" width="150"  height="150"
                    alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                    style="width: 150px; z-index: 1">
-              <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
-                      style="z-index: 1;">
+              <a type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                 style="z-index: 1;" href="/my_account/edit">
                 Редактировать профиль
-              </button>
+              </a>
             </div>
             <div class="ms-3" style="margin-top: 130px;">
               <h4 th:text="${user.name} + ' ' +${user.surname}"></h4>
@@ -40,36 +49,16 @@
           </div>
           <div class="card-body p-4 text-black">
             <div class="mb-5">
-              <p class="lead fw-normal mb-1">About</p>
+              <p class="lead fw-normal mb-1">Подробная информация</p>
               <div class="p-4" style="background-color: #C0C0C0;">
-                <p class="font-italic mb-1">Web Developer</p>
-                <p class="font-italic mb-1">Lives in New York</p>
-                <p class="font-italic mb-0">Photographer</p>
+                <p class="font-italic mb-1" th:text="'Телефон: ' + ${user.phoneNumber}"></p>
               </div>
             </div>
-            <div class="d-flex justify-content-between align-items-center mb-4">
-              <p class="lead fw-normal mb-0">Recent photos</p>
-              <p class="mb-0"><a href="#!" class="text-muted">Show all</a></p>
-            </div>
-            <div class="row g-2">
-              <div class="col mb-2">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
-                     alt="image 1" class="w-100 rounded-3">
-              </div>
-              <div class="col mb-2">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp"
-                     alt="image 1" class="w-100 rounded-3">
-              </div>
-            </div>
-            <div class="row g-2">
-              <div class="col">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp"
-                     alt="image 1" class="w-100 rounded-3">
-              </div>
-              <div class="col">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp"
-                     alt="image 1" class="w-100 rounded-3">
-              </div>
+            <div class="d-flex justify-content-end text-center py-1">
+              <a type="button" class="btn btn-outline-danger " data-mdb-ripple-color="dark"
+                 href="/logout">
+                Выйти из профиля
+              </a>
             </div>
           </div>
         </div>
@@ -77,10 +66,6 @@
     </div>
   </div>
 </section>
-<p th:text="'Name: ' +${user.name}"></p>
-<p th:text="'Surname: ' + ${user.surname}"></p>
-<p th:text="'Phone number: ' + ${user.phoneNumber}"></p>
-<p><a href="/logout">logout</a></p>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
