--- a/src/main/resources/templates/listOfUsers.html
+++ b/src/main/resources/templates/listOfUsers.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <title>list of users</title>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>list of users</title>
 </head>
 <body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
 
 <table class=" ">
-  <thead class="">
-  <tr class="">
-    <th class="border  border-slate-900 w-5/12 ">Name</th>
-    <th class="border  border-slate-900 w-6/12">Surname</th>
-    <th class="border border-slate-900 w-screen">More info</th>
-  </tr>
-  </thead>
-  <tbody class="">
-  <tr class="h-16" th:each="user : ${users}">
-    <td  th:text="${user.name}"></td>
-    <td  th:text="${user.surname}"></td>
-    <td><a th:href="'/user/' + ${user.id}">More info</a></td>
-  </tr>
-  </tbody>
+    <thead class="">
+    <tr class="">
+        <th class="border  border-slate-900 w-5/12 ">Name</th>
+        <th class="border  border-slate-900 w-6/12">Surname</th>
+        <th class="border  border-slate-900 w-6/12">Phone number</th>
+        <th class="border border-slate-900 w-screen">Delete</th>
+    </tr>
+    </thead>
+    <tbody class="">
+    <tr class="h-16" th:each="user : ${listOfUsers}">
+        <td th:text="${user.name}"></td>
+        <td th:text="${user.surname}"></td>
+        <td th:text="${user.phoneNumber}"></td>
+        <td><a th:href="'/admin/delete/' + ${user.id}">delete</a></td>
+    </tr>
+    </tbody>
 </table>
 
 
 <div class="mt-3 ml-3 mb-3 mr-3">
-  <a href="/user/new">
-    Add new user</a>
+    <a href="/user/new">
+        Add new user</a>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
