--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -9,14 +9,14 @@
 <div th:insert="~{model :: header}"></div>
 
 
-<h1 class="text-center">Мой профиль</h1>
+
 <section class="h-100 gradient-custom-2">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-lg-9 col-xl-7">
         <div class="card">
           <div class="rounded-top text-white d-flex flex-row" style="background-color: #222; height:193px;">
-            <div th:if="${user.avatar != null}" class="ms-4 mt-3 d-flex flex-column" style="width: 150px;">
+            <div th:if="${user.avatar != null}" class="ms-4 mt-3 d-flex flex-column" style="width: 150px;height: 150px;">
                 <img th:src="'/avatar/' + ${user.avatar.id}" width="150"  height="150"
                      alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                      style="width: 150px; z-index: 1">
@@ -29,7 +29,7 @@
               <img src="https://omsk.imperiya-pola.ru/img/nophoto.jpg" width="150"  height="150"
                    alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                    style="width: 150px; z-index: 1">
-              <a type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+              <a type="button" class="btn btn-outline-dark d-block" data-mdb-ripple-color="dark"
                  style="z-index: 1;" href="/my_account/edit">
                 Редактировать профиль
               </a>
@@ -44,6 +44,26 @@
               <div>
                 <p th:text="${listOfAds.size()}" class="mb-1 h5"></p>
                 <p class="small text-muted mb-0">Объявлений</p>
+              </div>
+              <div class="ms-3">
+                <a type="button" class="btn btn-info " data-mdb-ripple-color="dark"
+                   href="/my_ads">
+                  Мои объявления
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row gap-3 ">
+            <div th:each="ad : ${listOfAds}" class="card ms-4 mt-3 row" style="background-color:#E0E0E0 ; width: 221px;">
+              <div th:if="${not #lists.isEmpty(ad.imageList)}">
+                <img th:src="'/image/' + ${ad.imageList.get(0).id}" class="card-img-top" alt="...">
+              </div>
+              <div th:if="${ #lists.isEmpty(ad.imageList)}" >
+                <img src="https://prikolists.club/wp-content/uploads/2019/11/Screenshot_1-13.jpg" class="card-img-top" alt="...">
+              </div>
+              <div class="card-body">
+                <p th:text="${ad.title}" class="card-text text-primary"></p>
+                <a th:href="'/ad/info/' + ${ad.id}" class="btn btn-secondary float-end ">Подробнее...</a>
               </div>
             </div>
           </div>
