--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,11 +10,15 @@
 
 <main class="text-center"
       style="width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;">
+    max-width: 340px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 40px;">
+
   <form th:action="@{/login}" method="post">
-    <img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+    <img class="mb-4" src="https://icon-library.com/images/cart-icon-16.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Пожалуйста, войдите</h1>
 
     <div class="form-floating">
@@ -25,11 +29,11 @@
       <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
       <label for="floatingPassword">Пароль</label>
     </div>
-    <div th:if="${param.error}">
-      Неверный номер телефона или пароль
+    <div class="text-danger mt-3 mb-3"  >
+      <div th:if="${param.error}" >Неверный номер телефона или пароль</div>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
-    <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
+    <p class="mt-5 mb-3 text-muted">© 2022</p>
   </form>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
