--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,38 +7,66 @@
 </head>
 <body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
-<h1>Form for adding a user</h1>
-<form action="/registration" th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
-  <p>Name: <label>
-    <input type="text" th:field="*{name}">
-  </label>
-    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
-          </span>
-  </p>
-  <p>Surname: <label>
-    <input type="text" th:field="*{surname}">
-  </label>
-    <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">
-          </span>
-  </p>
-  <p>Avatar: <label>
-    <input type="file" accept=".png, .jpg, .jpeg" name="file">
-  </label>
-  </p>
-  <p>Phone number: <label>
-    <input type="text" th:field="*{phoneNumber}">
-  </label>
-    <span th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">
-          </span>
-  </p>
-  <p>Password: <label>
-    <input type="password" th:field="*{password}">
-  </label>
-    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
-          </span>
-  </p>
-  <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-</form>
+
+<main>
+  <div class="py-3 text-center mt-3">
+    <img class="d-block mx-auto mb-4" src="https://icon-library.com/images/cart-icon-16.png" alt="" width="72" height="57">
+    <h2>Новый пользователь</h2>
+    <p class="lead">Регистрация нового пользователя</p>
+  </div>
+  <div class="row text-light" style="width: 100%;
+    max-width: 900px;
+    margin: auto;
+    display: flex;">
+    <div class="bg-dark bg-opacity-75 rounded ">
+      <form class="needs-validation" action="/registration" th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
+        <div class="row g-3">
+
+          <div class="col-sm-6 mt-5 mb-3">
+            <label  class="form-label">Имя:</label>
+            <input type="text" th:field="*{name}" class="form-control">
+            <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+          </div>
+
+          <div class="col-sm-6 mt-5 mb-3">
+            <label  class="form-label">Фамилия:</label>
+            <input type="text" th:field="*{surname}" class="form-control">
+            <span class="text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
+          </div>
+
+          <div class="col-5">
+            <label class="col-5 mb-3 form-label">Аватар: </label>
+            <input type="file" accept=".png, .jpg, .jpeg" name="file">
+          </div>
+
+          <div class="col-7"></div>
+
+          <div class="col-6 mt-5 mb-3">
+            <label  class="form-label ">Телефон:</label>
+            <input type="text" th:field="*{phoneNumber}" class="form-control"  placeholder="Номер телефон">
+            <span class="text-danger" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></span>
+          </div>
+
+          <div class="col-6 mt-5 mb-3">
+            <label  class="form-label">Пароль: </label>
+            <input type="password" th:field="*{password}" class="form-control"  placeholder="Пароль">
+            <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+          </div>
+
+          <div class="col-4 mt-3 mb-3">
+              <button class="w-100 btn btn-outline-primary btn-lg" type="reset" value="Reset">Очистить</button>
+          </div>
+          <div class="col-4"></div>
+          <div class="col-4 mt-3 mb-3">
+            <button class="w-100 btn btn-lg btn-outline-success" type="submit" value="Submit">Зарегистрировать</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</main>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
